tests/data/valid/00-HTML.txt
// HTML
::Q1::[html] What is true about the following HMTL?
<pre>
&lt;a href="http://www.dr-chuck.com/page2.htm"&gt;Second Page&lt;/a&gt;
</pre>
{
=The reference is an absolute reference
~The reference is a relative reference
~The HTML is improperly formed and there will be a syntax error
~The text "Second Page" is improperly placed and will not be seen
}

::Q2::What do you put at the beginning of an HTML file to inform
the browser which variant of HTML you will be using in this document?
{
=DOCTYPE
~<html>
~<body>
~<?xml version>
~<meta type>
~<xs:sequence>
}

::Q3::What is the preferred tag in modern HTML to indicate that text
is to be shown in bold format?
{
=strong
~b
~bold
~span
~<xs:bold>
}

::Q4::What is the preferred tag in modern HTML to indicate that text
is to be shown in italics format?
{
=em
~i
~italics
~span
~<xs:italics>
}

::Q5::What organization is responsibile for standards for HTML and the web.
{
=World Wide Web Consortium
~HTMLco.com
~Unesco
~CERN
~NCSA
}

::Q6::What is the HTML tag for an item in a bulletted list?
{
=li
~list:item
~bullet
~item
~tag
}

::Q7::Which is the correct ordering of opening tags in a well formed html
document?
{
=html head title body h1
~title head html body h1
~body html h1 head title
~h1 body title head html
}

::Q8::What is the start of an HTML comment?
{
=<!--
~/*
~'''
~\#
}

::Q9::What is the tag that is used in a document's <head> 
area to set the text shown in the tab of the browser or title
bar?
{ =title =TITLE }

::Q10::In HTML, what attribute is used to indicate text that will be
shown if an image is not loaded or read to a user that is using a 
screen reader?
{ =alt =ALT}

::HTML_Q1::
What is the primary purpose of HTML?
{
=To mark up text to communicate meaning and structure
~To control page layout and styling
~To execute logic on the server
~To store data in a database
}

::HTML_Q2::
HTML was originally invented in:
{
=The early 1990s
~The late 1970s
~The early 2000s
~Last Tuesday
}

::HTML_Q3::
Which organization was formed to develop open web standards?
{
=World Wide Web Consortium (W3C)
~Mozilla Foundation
~Internet Engineering Task Force
~HTML Committee of Doom
}

::HTML_Q4::
Why does the W3C emphasize open standards?
{
=To avoid proprietary vendor lock-in
~To increase browser competition
~To simplify programming
~To make HTML harder to break
}

::HTML_Q5::
Which of the following is a basic requirement of modern, valid HTML?
{
=Tags must be properly closed
~Tags must be uppercase
~Whitespace must be exact
~Browsers must enforce errors
}

::HTML_Q6::
Which tag represents the main visible content of an HTML page?
{
=<body>
~<head>
~<meta>
~<doctype>
}

::HTML_Q7::
What is the purpose of the <head> section in an HTML document?
{
=To contain metadata about the page
~To display visible content
~To define links between pages
~To store JavaScript variables
}

::HTML_Q8::
When a URL points to a directory on a web server, which file is commonly loaded by default?
{
=index.html
~home.html
~main.htm
~default.txt
}

::HTML_Q9::
Why do browsers tolerate badly formed HTML?
{
=To preserve backward compatibility
~To enforce standards
~To improve security
~To reduce rendering time
}

